# moe-compression

./: .gitignore  .gitmodules  CLAUDE.md  README.md  pyproject.toml  requirements.txt  requirements_full.txt
configs/compress_then_train/: 05B_mlp_btt_llm_v2.yaml  05B_mlp_btt_llm_v2_combined.yaml  05B_mlp_nystrom.yaml  05B_mlp_nystrom_combined.yaml  05B_mlp_nystrom_smoke.yaml  qwen2_5_0_5b_c4.yaml  qwen3_30b_a3b_mobe.yaml  qwen3_30b_a3b_mobe_33.yaml  qwen3_30b_a3b_mobe_33_even.yaml  qwen3_30b_a3b_mobe_33_even_fit_only.yaml  qwen3_30b_a3b_nystrom_moe.yaml  qwen3_30b_a3b_nystrom_moe_sweep.yaml  qwen3_30b_a3b_nystrom_moe_teacher.yaml  qwen3_30b_a3b_rfid.yaml  qwen3_8b_btt_down_o1b.yaml  qwen3_8b_btt_gate_o1b.yaml  qwen3_8b_mixbtt_down_act_nl.yaml  qwen3_8b_mixbtt_down_act_nl_mix.yaml  qwen3_8b_mixbtt_down_ws.yaml  qwen3_8b_mixbtt_gate_act_nl.yaml  qwen3_8b_mixbtt_gate_act_nl_mix.yaml  qwen3_8b_mixbtt_gate_ws.yaml
configs/eval/: deepseek-moe-16b-base.yaml  deepseek-v2-lite.yaml  qwen1_5_moe_a2_7b.yaml  qwen3_30b_a3b.yaml  qwen3_30b_a3b_baseline_c4.yaml  qwen3_30b_a3b_baseline_general.yaml  qwen3_30b_a3b_baseline_hellaswag.yaml  (+37 more)
scripts/: _selftest_full_nystrom_math.py  active_param_stats.py  compress_then_train.sh  compress_then_train_05B_sweep.sh  eval.sh  expert_stats.py  full_nystrom_cov_analysis.py  full_nystrom_recon_eval.py  mix_btt_fit_scan.py  plot_mix_btt_fit.py  report_expert_ratios.py  run_level1_sweep.sh  run_nystrom_a100.sh  scoring.sh  summarize_05B_sweep.py  train.sh  warm_leverage_cache.py  warm_pivchol_cache.py
src/: compress_then_train.py
(+155 files in other folders)
